# eodash_catalog

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/: ci.yml
.github/workflows/: ci.yml  publish-latest.yml  python-publish.yml
src/eodash_catalog/: __about__.py  __init__.py  duration.py  endpoints.py  generate_indicators.py  sh_endpoint.py  stac_handling.py  thumbnails.py  utils.py
tests/: test_generate.py  test_geoparquet.py  test_gp.py
tests/test-data/: regional_forecast.json
tests/testing-catalogs/: testing-json.json  testing.yaml
tests/testing-collections/: test_CROPOMAT1.yaml  test_cmems.json  test_cog.json  test_geodb.yaml  test_geodb_locations.yaml  test_geojson.yaml  test_locations_processing.json  test_process.yaml  test_projection.json  test_sh_wms.json  test_sh_wms_locations.json  test_tif_demo_1.yaml  test_tif_demo_1_json.json  test_tif_demo_2.yaml  test_veda.json  test_veda_tiles.json  test_wms_no_time.yaml
tests/testing-indicators/: test_indicator.yaml
tests/testing-layers/: baselayers.yaml  overlays.yaml
